kb/app2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: app2
  name: app2
spec:
  containers:
  - image: nginx
    name: app2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
