kb/app3.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: app3
  name: app3
spec:
  containers:
  - image: nginx
    name: app3
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
