kb/ingress_complexscenario-Deploy1info.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-deploy-main
spec:
  replicas: 3
  selector:
    matchLabels:
      run: nginx-main
  template:
    metadata:
      labels:
        run: nginx-main
    spec:
      containers:
      - image: nginx
        name: nginx" 

# creation of service
#kc expose deploy nginx-deploy-main --name app1-service --port 80   # This is an imperative way
