kb/nginxbasepod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginxbasepod
spec:
  containers:
  - name: nginx    
    image: artifactory.otxlab.net/dockerhub/nginx
