kb/nginxforsecrets.yaml
# # using Env..............................................
# apiVersion: v1
# kind: Pod
# metadata: 
#   name: nginx
# spec:
#   containers:
#   - name: nginx    
#     image: artifactory.otxlab.net/dockerhub/nginx
#     ports:
#       - containerPort: 80
#     env:
#         # Define the environment variable
#       - name: SECRET_USERNAME
#         valueFrom:
#           secretKeyRef:
#             name: mysecret1        
#             key: username 
#       - name: SECRET_PASSWORD
#         valueFrom:
#           secretKeyRef:
#             name: mysecret1
#             key: password
# # # using Env ends here..............................................            

# #create a nginx pod fopr conig maps
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
spec:
  containers:
  - name: nginx    
    image: artifactory.otxlab.net/dockerhub/nginx
    ports:
      - containerPort: 80
 # Creating using volume mounts-----------------------------------------------
    volumeMounts:
    - name: foo-volume
      mountPath: "/opt/foo"
      
  volumes:
    - name: foo-volume
      secret:
        secretName: mysecret1
# Another sub program adding to the above        
        items:
        - key: username
          path: mygroup/my-username
        - key: password
          path: mygroup/my-password
